Create Toastedbread.html and Finish Adding Content
Additionally, the recipe pages have a relative link to the homepage (index.html)

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 
 <body>
     <h1>Odin Recipes</h1>
-
+    <p>
     <a href="recipes/pasta.html"> Pasta</a> 
+    </p>
+    <p>
+    <a href="recipes/toastedbread.html"> Toasted Bread</a>
+    </p>
 </body>
 
 </html>
