--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -32,5 +32,8 @@
         <li>Into the pan, add remaining 2 tablespoons butter and garlic. Cook until the garlic becomes fragrant, about 1 minute. Whisk in flour and cook until no longer raw, 2 minutes. Stir in heavy cream and milk, then whisk in egg yolk.  Bring to a low simmer and whisk in parmesan. When cheese is melted and sauce has thickened slightly, add cooked pasta and shrimp, tossing to combine. Season with salt and pepper.</li>
         <li>Garnish with more parmesan and parsley.</li>
     </ol>
+
+    <a href="../index.html"> Homepage</a>
+    
 </body>
 </html>
