Create and finish Cornflakes.html file
Also added a gif to the homepage.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <img src="https://c.tenor.com/LjhaLjAdrQgAAAAM/winnie-the-pooh-hungry.gif" 
+    width="300" alt="Gif of hungry winnie the pooh">
     <p>
-    <a href="recipes/pasta.html"> Pasta</a> 
+        <a href="recipes/pasta.html"> Pasta</a> 
     </p>
+    
     <p>
-    <a href="recipes/toastedbread.html"> Toasted Bread</a>
+        <a href="recipes/toastedbread.html"> Toasted Bread</a>
+    </p>
+
+    <p>
+        <a href="recipes/cornflakes.html"> Cornflakes</a>
     </p>
 </body>
 
