--- a/index.html
+++ b/index.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="utf-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <img src="https://c.tenor.com/LjhaLjAdrQgAAAAM/winnie-the-pooh-hungry.gif" 
+    <h1 class="header">Odin Recipes</h1>
+    <img id="winnie" src="https://c.tenor.com/LjhaLjAdrQgAAAAM/winnie-the-pooh-hungry.gif" 
     width="300" alt="Gif of hungry winnie the pooh">
     <p>
-        <a href="recipes/pasta.html"> Pasta</a> 
+        <a class="fl" href="recipes/pasta.html"> Pasta</a> 
     </p>
     
     <p>
-        <a href="recipes/toastedbread.html"> Toasted Bread</a>
+        <a class="sl" href="recipes/toastedbread.html"> Toasted Bread</a>
     </p>
 
     <p>
-        <a href="recipes/cornflakes.html"> Cornflakes</a>
+        <a class="tl" href="recipes/cornflakes.html"> Cornflakes</a>
     </p>
 </body>
 
