Add Style to the Cornflakes html page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1 class="header">Odin Recipes</h1>
-    <img id="winnie" src="https://c.tenor.com/LjhaLjAdrQgAAAAM/winnie-the-pooh-hungry.gif" 
+    <img class="img" src="https://c.tenor.com/LjhaLjAdrQgAAAAM/winnie-the-pooh-hungry.gif" 
     width="300" alt="Gif of hungry winnie the pooh">
     <p>
         <a class="fl" href="recipes/pasta.html"> Pasta</a> 
