--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <img class="img" src="https://c.tenor.com/LjhaLjAdrQgAAAAM/winnie-the-pooh-hungry.gif" 
     width="300" alt="Gif of hungry winnie the pooh">
     <p>
-        <a class="fl" href="recipes/pasta.html"> Pasta</a> 
+        <a class="links fl" href="recipes/pasta.html"> Pasta</a> 
     </p>
     
     <p>
-        <a class="sl" href="recipes/toastedbread.html"> Toasted Bread</a>
+        <a class="links sl" href="recipes/toastedbread.html"> Toasted Bread</a>
     </p>
 
     <p>
-        <a class="tl" href="recipes/cornflakes.html"> Cornflakes</a>
+        <a class="links tl" href="recipes/cornflakes.html"> Cornflakes</a>
     </p>
 </body>
 
