Add Style to the Toasted Bread Page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="homeback">
     <h1 class="header">Odin Recipes</h1>
     <img class="img" src="https://c.tenor.com/LjhaLjAdrQgAAAAM/winnie-the-pooh-hungry.gif" 
     width="300" alt="Gif of hungry winnie the pooh">
